k8s/tinyx-user/srvc-user/middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: block-internal-user-get
  namespace: default
spec:
  errors:
    status:
      - "403"
    service:
      name: dummy-service
      port: 80
    query: /
