k8s/tinyx-user/srvc-user/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: srvc-user-service
spec:
  type: ClusterIP
  selector:
    app: tinyx
    module: srvc-user
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
