k8s/tinyx-user/srvc-user/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srvc-user-ingress
  #annotations:
  #  traefik.ingress.kubernetes.io/router.middlewares: default-block-internal-user-get@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          #- path: /user/get/id
          #  pathType: Prefix
          #  backend:
          #    service:
          #      name: dummy-service
          #      port:
          #        number: 80
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: srvc-user-service
                port:
                  number: 8080
